Layout table roles should provide name from contents when used recursively.

Recent table refactoring means we expose more layout tables. This is
generally a good thing.

It broke some accessibility in Hangouts, where there was a layout table
inside of an ARIA button and the accessible text of the button came from
inside the layout table. Previously the layout table was just exposed as
generic elements, and layout table roles should behave the same way with
regards to how text is exposed to ancestors.

Bug: 856277
Change-Id: I9b30931b306fda09a5408df4dc3b3dd1c54e619e
Reviewed-on: https://chromium-review.googlesource.com/1117628
Commit-Queue: Aaron Leventhal <aleventhal@chromium.org>
Reviewed-by: Aaron Leventhal <aleventhal@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571139}